--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "config": "^3.2.5",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.21.3",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.11",
     "multer": "^1.4.2",
     "npm": "^6.13.7",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "razorpay": "^2.0.6"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
